# ltrp_config_ros

./: CMakeLists.txt  package.xml
config/: error_code_list.json  parameters.json  topic_list.json
config/calibration/: dist_reference_DH-IPC-HDBW1431E.json  dist_reference_DH-IPC-HDBW1431E.json.bak  dist_reference_DS-2CD2166G2-I.json  dist_reference_DS-2CD2166G2-I.json.bak  dist_reference_DS-2CD2166G2-I.json.test  dist_reference_IPC-HDBW2230EN-S-S2-T.json  ip_camera_calibration_info_DH-IPC-HDBW1431E.json  ip_camera_calibration_info_DH-IPC-HDBW1431E_720P.json  ip_camera_calibration_info_DS-2CD2166G2-I.json  ip_camera_calibration_info_DS-2CD2347G2-L.json  ip_camera_calibration_info_IPC-HDBW2230EN-S-S2-T.json
msg/: ButtonState.msg  Center.msg  ComputingTime.msg  Contour.msg  Detection.msg  Error.msg  Feedback.msg  Illumination.msg  ImageProcessingComputingTime.msg  LineDetectionComputingTime.msg  NodeReady.msg  NodeRespawnResult.msg  Obstacle.msg  Overseer.msg  RTK.msg  RangeData.msg  Rotation.msg  SubROIDetection.msg  SystemActivate.msg  SystemStatus.msg  Vital.msg
scripts/: utils.py
